--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+    <html><head>
+    <title>My First Web Page</title>
+</head>
+<body>4</body>
+<h1>favorite band</h1>
+</html>
